Use virtual threads and Java 20